# SkyrimSoulsRE

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  SkyrimSoulsRE.vcxproj  SkyrimSoulsRE.vcxproj.filters  cmake_generate.py  exports.def  version.h  version.rc
.github/workflows/: submodule_notify_parent.yml
Flash/: CombatAlertOverlayMenu.fla
Scripts/: DLC2SummonDremoraMerchantScript.pex  QF_MQ201_00035D5F.pex  playerbookshelfcontainerscript.pex
Scripts/Source/: DLC2SummonDremoraMerchantScript.psc  PlayerBookShelfContainerScript.psc  QF_MQ201_00035D5F.psc
cmake/: Version.h.in  sourcelist.cmake  version.rc.in
include/: AudioHooks.h  AutoCloseManager.h  BGSSaveLoadManagerEx.h  ConsoleCommandHooks.h  EngineFixesChecker.h  Events.h  Hooks.h  Hooks_BookMenu.h  Hooks_Console.h  Hooks_ContainerMenu.h  Hooks_DialogueMenu.h  Hooks_FavoritesMenu.h  Hooks_Input.h  Hooks_InventoryMenu.h  Hooks_JournalMenu.h  Hooks_LockpickingMenu.h  Hooks_MessageBoxMenu.h  Hooks_Papyrus.h  Hooks_SleepWaitMenu.h  Hooks_TweenMenu.h  ItemMenuUpdater.h  MenuCache.h  MenuProcessing.h  Offsets.h  PCH.h  PapyrusHook.h  Settings.h  SkyrimSoulsRE.h  SlowMotionHandler.h  Tasks.h  UIBlurManagerEx.h  UnpausedTaskQueue.h  Util.h  Utility.h  version.h
include/Controls/: BSWin32KeyboardDeviceEx.h  CameraMovement.h  InputHandlerEx.h  MapInputHandlerEx.h  MenuControlsEx.h  PlayerControlsEx.h
include/Menus/: BarterMenuEx.h  BookMenuEx.h  CombatAlertOverlayMenu.h  ConsoleEx.h  ContainerMenuEx.h  CustomMenuEx.h  DialogueMenuEx.h  FavoritesMenuEx.h  GiftMenuEx.h  HUDMenuEx.h  Hooks_BarterMenu.h  Hooks_BookMenu.h  Hooks_Console.h  Hooks_ContainerMenu.h  Hooks_CustomMenu.h  Hooks_DialogueMenu.h  Hooks_FavoritesMenu.h  Hooks_GiftMenu.h  Hooks_HUDMenu.h  Hooks_InventoryMenu.h  Hooks_JournalMenu.h  Hooks_LevelUpMenu.h  Hooks_LockpickingMenu.h  Hooks_MagicMenu.h  Hooks_MapMenu.h  Hooks_MessageBoxMenu.h  Hooks_SleepWaitMenu.h  Hooks_StatsMenu.h  Hooks_TrainingMenu.h  Hooks_TutorialMenu.h  Hooks_TweenMenu.h  InventoryMenuEx.h  JournalMenuEx.h  LockpickingMenuEx.h  MagicMenuEx.h  MapMenuEx.h  MessageBoxMenuEx.h  ModManagerMenuEx.h  SleepWaitMenuEx.h  StatsMenuEx.h  (+2 more)
ini/: SkyrimSoulsRE.ini
src/: AudioHooks.cpp  AutoCloseManager.cpp  BGSSaveLoadManagerEx.cpp  ConsoleCommandHooks.cpp  Events.cpp  Hooks.cpp  Hooks_BookMenu.cpp  Hooks_Console.cpp  Hooks_ContainerMenu.cpp  Hooks_DialogueMenu.cpp  Hooks_FavoritesMenu.cpp  Hooks_Input.cpp  Hooks_InventoryMenu.cpp  Hooks_JournalMenu.cpp  Hooks_LockpickingMenu.cpp  Hooks_MessageBoxMenu.cpp  Hooks_Papyrus.cpp  Hooks_SleepWaitMenu.cpp  Hooks_TweenMenu.cpp  ItemMenuUpdater.cpp  MenuCache.cpp  MenuProcessing.cpp  PapyrusHook.cpp  PayprusHook.cpp  Settings.cpp  SkyrimSoulsRE.cpp  SlowMotionHandler.cpp  Tasks.cpp  UIBlurManagerEx.cpp  UnpausedTaskQueue.cpp  Util.cpp  Utility.cpp  main.cpp
src/Controls/: BSWin32KeyboardDeviceEx.cpp  CameraMovement.cpp  MenuControlsEx.cpp  PlayerControlsEx.cpp
src/Menus/: AutoCloseManager.cpp  BarterMenuEx.cpp  BookMenuEx.cpp  CombatAlertOverlayMenu.cpp  ConsoleEx.cpp  ContainerMenuEx.cpp  CustomMenuEx.cpp  DialogueMenuEx.cpp  FavoritesMenuEx.cpp  GiftMenuEx.cpp  HUDMenuEx.cpp  Hooks_BarterMenu.cpp  Hooks_BookMenu.cpp  Hooks_Console.cpp  Hooks_ContainerMenu.cpp  Hooks_CustomMenu.cpp  Hooks_DialogueMenu.cpp  Hooks_FavoritesMenu.cpp  Hooks_GiftMenu.cpp  Hooks_HUDMenu.cpp  Hooks_InventoryMenu.cpp  Hooks_JournalMenu.cpp  Hooks_LevelUpMenu.cpp  Hooks_LockpickingMenu.cpp  Hooks_MagicMenu.cpp  Hooks_MapMenu.cpp  Hooks_MessageBoxMenu.cpp  Hooks_ModManagerMenu.cpp  Hooks_SleepWaitMenu.cpp  Hooks_StatsMenu.cpp  Hooks_TrainingMenu.cpp  Hooks_TutorialMenu.cpp  Hooks_TweenMenu.cpp  InventoryMenuEx.cpp  JournalMenuEx.cpp  LevelUpMenuEx.cpp  LockpickingMenuEx.cpp  MagicMenuEx.cpp  MapMenuEx.cpp  MessageBoxMenuEx.cpp  (+6 more)
